# session_summarizer

./: .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.claude/commands/: create-typer-command.md  update-session-settings.md
.research/: 2026_03_31_diarization_pipeline_architecture.md  backchannel_identification_architecture_decisions.md  canary_qwen_word_confidence_scores.md  segmentation_evaluation.md  smart_turn_segment_scoring_design.md  speaker_segment_assignment.md  to_do.md  ttrpg_transcriber_architecture.docx.md  using_diarizatoin_lm.md
data/test_meeting/: SimpleTranscript.json
notebooks/: test_analysis.py
src/session_summarizer/: __init__.py  __main__.py
src/session_summarizer/alignment/: __init__.py
src/session_summarizer/audio/: __init__.py  sound_cleaning.py  sound_cleaning_helper.py  speaker_audio.py
src/session_summarizer/commands/: add_embeddings.py  align_audio.py  align_transcript.py  clean_audio.py  clean_audio_command.py  clean_original_audio.py  clean_session.py  compute_segments.py  compute_vad_segments.py  create_speaker_clips.py  diarize_audio.py  dump_and_compare_texts.py  dump_human_format.py  first_stitch_clips.py  identify_speakers.py  process_pipeline.py  register_speaker.py  register_speakers.py  score_confidence.py  session_processing_command.py  stitch_identities.py  stitch_results.py  test_command.py  transcribe_audio.py  update_turn_end.py  validate_transcribers.py
src/session_summarizer/console/: command_runner.py  console_validation.py  file_logging_protocol.py  main.py  rich_logging_protocol.py
src/session_summarizer/diarization/: __init__.py  anonymous_clips.py  candidate_pool.py  candidate_score.py  clip_merger.py  diarizen_diarizer.py  msdd_diarizer.py  speech_clip_factory.py
src/session_summarizer/evaluation/: __init__.py  evaluate_error_rate.py  text_cleaner.py
src/session_summarizer/helpers/: add_embeddings.py  audio_cleaner.py  audio_diarizer.py  audio_segmenter.py  audio_transcriber.py  confidence_scorer.py  first_stitcher.py  identity_stitch.py  speaker_identifier.py  speech_clip_factory.py  transcript_aligner.py  update_turn_end.py  vad_segmenter.py
src/session_summarizer/logging/: __init__.py  composite_logger.py  file_logger.py
src/session_summarizer/processing_results/: __init__.py  alignment_result.py  process_result_protocol.py  segment_protocol.py  speech_clip_set.py  transcription_result.py
src/session_summarizer/protocols/: __init__.py  command_protocol.py  embedding_factory.py  logging_protocol.py  session_settings.py  speech_clip.py  transcriber_protocol.py
src/session_summarizer/settings/: __init__.py  diarization_stitching_settings.py  session_settings.py  vad_settings.py
src/session_summarizer/speaker/: __init__.py  eres2netv2_embedder.py
src/session_summarizer/speaker_embeddings/: __init__.py  eres2netv2_embedder.py  registered_speakers.py  speaker_embeddings_helper.py
src/session_summarizer/transcription/: __init__.py  canary_qwen_transcriber.py  parakeet_ctc_aligner.py  parakeet_ctc_confidence_scorer.py  parakeet_ctc_word_aligner.py  transcription_validator.py  whisper_large_transcriber.py  whisper_transcriber.py
src/session_summarizer/turn_detection/: __init__.py  smart_turn_predictor.py  smart_turn_scorer.py
src/session_summarizer/utils/: __init__.py  command_runner.py  common_paths.py  flush_gpu_memory.py  logging_config.py  test_cleaner.py  (+2 more)
src/smart_turn/: __init__.py  audio_utils.py  inference.py
test_meeting/: settings.yaml
tests/integration/: conftest.py  temp_session.py  test_ground_truth.py  test_register_speaker.py
tests/unit/: test_cli.py  test_diarization_merge.py  test_segment_splitter.py  test_session_settings.py  test_transcription_result.py
voice_samples/: registered_speakers.yaml
(+3 files in other folders)
