[project]
name = "session-summarizer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "Erik Saltwell", email = "erik.saltwell@gmail.com" }]
requires-python = "==3.12.3"
dependencies = [
    "clearvoice>=0.1.2",
    "python-dotenv>=1.2.1",
    "rich>=14.2.0",
    "typer>=0.21.1",
    "openai-whisper>=20250625",
    "nemo_toolkit[asr]",
    "torch==2.10.0",
    "torchvision==0.25.0",
    "torchaudio==2.10.0",
    "ml-dtypes>=0.5,<0.6",
    "modelscope",
    "addict>=2.4.0",
    "simplejson>=3.20.2",
    "mathspell",
    "jiwer>=3.1.0",
]

[project.scripts]
session-summarizer = "session_summarizer.console:main.app"

[build-system]
requires = ["uv_build>=0.9.25,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pre-commit>=4.5.1",
    "pyright>=1.1.0",
    "pytest>=9.0.2",
    "ruff>=0.14.13",
    "ssort>=0.16.0",
    "types-pyyaml>=6.0.12.20250915",
]

[tool.uv]
environments = [
    "sys_platform == 'linux' and implementation_name == 'cpython' and python_full_version >= '3.12' and python_full_version < '3.13'",
]

[tool.uv.sources]
torch = [{ index = "pytorch-cu128" }]
torchvision = [{ index = "pytorch-cu128" }]
torchaudio = [{ index = "pytorch-cu128" }]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true


[tool.pytest.ini_options]
testpaths = ["tests/unit", "tests/integration"]
addopts = "-q -s"
markers = [
    "integration: marks tests as integration tests (slow, requires GPU). Deselect with '-m \"not integration\"'",
]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.12"
warn_unused_configs = true

# Reasonable signal without going full-strict
check_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_defs = false

no_implicit_optional = true
warn_return_any = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_unreachable = true

# Keep third-party stubs explicit (we'll add types-* as needed)
ignore_missing_imports = true

# Nice for CLI apps with a src/ layout
mypy_path = ["src"]
packages = ["session_summarizer"]
